--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>New Year's Eve at Cash's House</title>
 <style>
   * {
@@ -18,15 +19,17 @@
     justify-content: center;
     min-height: 100vh;
     color: #f9fafb;
+    padding: 20px;
   }
 
   .card {
     position: relative;
-    width: 360px;
-    height: 540px;
+    width: 100%;
+    max-width: 420px;
+    min-height: 600px;
     background: radial-gradient(circle at top, #1f2937 0, #020617 70%);
     border-radius: 24px;
-    padding: 32px 28px;
+    padding: 40px 32px;
     overflow: hidden;
     box-shadow:
       0 25px 60px rgba(0, 0, 0, 0.6),
@@ -65,7 +68,7 @@
     height: 10px;
     background: linear-gradient(to bottom, #facc15, #f97316);
     border-radius: 999px;
-    opacity: 0.7;
+    opacity: 0;
     animation: fall 8s linear infinite;
   }
 
@@ -78,22 +81,28 @@
   .confetti:nth-child(7) { left: 70%; animation-delay: 6s; }
   .confetti:nth-child(8) { left: 80%; animation-delay: 7s; height: 9px; }
   .confetti:nth-child(9) { left: 90%; animation-delay: 2.5s; height: 13px; }
-
-  @keyframes fall {
-    0% {
-    top: -50px;      transform: translateX(0) rotate(0deg);
-       .confetti:nth-child(10) { left: 15%; animation-delay: 1.5s; height: 11px; }
+  .confetti:nth-child(10) { left: 15%; animation-delay: 1.5s; height: 11px; }
   .confetti:nth-child(11) { left: 35%; animation-delay: 3.5s; height: 9px; }
   .confetti:nth-child(12) { left: 55%; animation-delay: 5.5s; height: 13px; }
   .confetti:nth-child(13) { left: 75%; animation-delay: 0.5s; height: 8px; }
   .confetti:nth-child(14) { left: 85%; animation-delay: 4.5s; height: 10px; }
   .confetti:nth-child(15) { left: 95%; animation-delay: 6.5s; height: 12px; }
+
+  @keyframes fall {
+    0% {
+      top: -50px;
+      opacity: 0;
+      transform: translateX(0) rotate(0deg);
+    }
+    10% {
+      opacity: 0.7;
     }
     50% {
       transform: translateX(10px) rotate(90deg);
     }
     100% {
-      top: 560px;
+      top: 110%;
+      opacity: 0.7;
       transform: translateX(-5px) rotate(180deg);
     }
   }
@@ -119,9 +128,8 @@
   .headline {
     text-align: center;
     margin-top: 24px;
-    font-size: 1.7rem;
+    font-size: 1.9rem;
     line-height: 1.3;
-    color: #facc15;
     text-transform: uppercase;
     letter-spacing: 0.16em;
     animation: shimmer 3.5s ease-in-out infinite;
@@ -133,6 +141,7 @@
       #facc15 75%,
       #e5e7eb 100%
     );
+    background-size: 300% 100%;
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
@@ -140,12 +149,12 @@
 
   @keyframes shimmer {
     0% {
-      background-position: -200% 0;
+      background-position: -300% 0;
     }
     100% {
-    background-position: 300% 0;    
-         filter: brightness(1.2) contrast(1.1);
-       }
+      background-position: 300% 0;
+    }
+  }
 
   .subhead {
     text-align: center;
@@ -155,17 +164,14 @@
     opacity: 0.9;
   }
 
-  .details {
-    margin-top: 32px;
-    font-size: 0.85rem;
-   
   .theme {
     text-align: center;
-    margin-top: 12px;
-    font-size: 1.1rem;
+    margin-top: 16px;
+    margin-bottom: 8px;
+    font-size: 1.15rem;
     font-style: italic;
-    color: #facc15;
-    text-shadow: 0 0 20px rgba(250, 204, 21, 0.5);
+    font-weight: 500;
+    text-shadow: 0 0 25px rgba(250, 204, 21, 0.6);
     animation: shimmer 3.5s ease-in-out infinite;
     background: linear-gradient(
       120deg,
@@ -175,22 +181,28 @@
       #facc15 75%,
       #e5e7eb 100%
     );
-    background-size: 200% 100%;
+    background-size: 300% 100%;
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
   }
-    line-height: 1.6;
+
+  .details {
+    margin-top: 32px;
+    font-size: 0.9rem;
+    line-height: 1.7;
     color: #e5e7eb;
   }
 
   .details strong {
     color: #facc15;
     font-weight: 600;
+    display: block;
+    margin-bottom: 4px;
   }
 
-  .time-row {
-    margin-top: 12px;
+  .details > div {
+    margin-bottom: 20px;
   }
 
   .time-row span {
@@ -198,29 +210,13 @@
   }
 
   .byob {
-    margin-top: 16px;
-    padding-top: 12px;
-    border-top: 1px solid rgba(148, 163, 184, 0.4);
-    font-size: 0.85rem;
+    padding-top: 20px;
+    border-top: 1px solid rgba(148, 163, 184, 0.3);
   }
 
-  .byob strong {
-    color: #facc15;
-  }
-
-  .footer {
-    margin-top: 32px;
-    text-align: center;
-   
   .dress-code {
-    margin-top: 16px;
-    padding-top: 12px;
-    border-top: 1px solid rgba(148, 163, 184, 0.4);
-    font-size: 0.85rem;
-  }
-
-  .dress-code strong {
-    color: #facc15;
+    padding-top: 20px;
+    border-top: 1px solid rgba(148, 163, 184, 0.3);
   }
 
   .dress-section {
@@ -229,17 +225,21 @@
 
   .dress-section strong {
     color: #f97316;
-    font-size: 0.9rem;
+    font-size: 0.95rem;
   }
-    font-size: 0.8rem;
+
+  .footer {
+    margin-top: 32px;
+    text-align: center;
+    font-size: 0.85rem;
     color: #9ca3af;
   }
 
   .clink {
     display: inline-flex;
     align-items: center;
-    gap: 6px;
-    margin-top: 4px;
+    gap: 8px;
+    margin-top: 8px;
     color: #facc15;
   }
 
@@ -281,8 +281,17 @@
   }
 
   @media (max-width: 480px) {
+    body {
+      padding: 10px;
+    }
     .card {
-      transform: scale(0.95);
+      padding: 32px 24px;
+    }
+    .headline {
+      font-size: 1.6rem;
+    }
+    .theme {
+      font-size: 1rem;
     }
   }
 </style>
@@ -299,7 +308,7 @@
     <div class="confetti"></div>
     <div class="confetti"></div>
     <div class="confetti"></div>
-       <div class="confetti"></div>
+    <div class="confetti"></div>
     <div class="confetti"></div>
     <div class="confetti"></div>
     <div class="confetti"></div>
@@ -311,11 +320,11 @@
         <div class="tagline">Ring in the new year</div>
         <div class="headline">New Year's Eve<br />at Cash's House</div>
         <div class="subhead">Austin, Texas</div>
+        <div class="theme">"All That Glitters Is Gold"</div>
 
         <div class="details">
           <div>
-            <strong>Location</strong><br />
-                   <div class="theme">"All That Glitters Is Gold"</div>
+            <strong>Location</strong>
             Cash's House<br />
             13130 Pond Springs Rd, #3312<br />
             Austin, TX 78729
@@ -328,12 +337,12 @@
           </div>
 
           <div class="byob">
-            <strong>Drinks</strong><br />
+            <strong>Drinks</strong>
             BYOB, but there will be a batched cocktail and bubbly ready for midnight.
           </div>
-         
+
           <div class="dress-code">
-            <strong>Dress Code</strong><br />
+            <strong>Dress Code</strong>
             <div class="dress-section">
               <strong>Ladies:</strong><br />
               Cocktail or party attire encouraged. Sequins, metallics, champagne tones, or gold accents are perfect. Dressy but fun. Whatever makes you feel great ringing in the New Year.
