Revise New Year's Eve event details
Updated event title and description for New Year's Eve party.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>New Year's Eve at Cash's House</title>
-<style>
+    <title>New Year's Eve Party 2025</title>
+   <style>
   * {
     box-sizing: border-box;
     margin: 0;
@@ -150,6 +150,25 @@
   @keyframes shimmer {
     0% {
       background-position: -300% 0;
+
+           .description {
+        text-align: center;
+        margin-top: 20px;
+        font-size: 1.1rem;
+        line-height: 1.6;
+        color: #f9fafb;
+        max-width: 600px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      .hosts {
+        text-align: center;
+        margin-top: 15px;
+        font-size: 1rem;
+        color: #d4af37;
+        font-weight: 500;
+      }
     }
     100% {
       background-position: 300% 0;
@@ -228,6 +247,7 @@
   .time-row span {
     display: block;
   }
+ 
 
   .byob {
     padding-top: 20px;
@@ -244,30 +264,13 @@
        padding: 14px 18px;
     background: rgba(249, 115, 22, 0.06);
     border-radius: 10px;
-    border-left: 3px solid #f97316;
     line-height: 1.8;
   }
 
-  .dress-section strong {
-    color: #f97316;
-     display: inline-block;
-    margin-bottom: 8px;
-  .footer {
-    margin-top: 32px;
-    text-align: center;
-    font-size: 0.85rem;
-    color: #9ca3af;
-  }
-
   .clink {
-    display: inline-flex;
-    align-items: center;
-    gap: 8px;
     margin-top: 8px;
-    color: #facc15;
   }
 
-  .glass {
     width: 14px;
     height: 26px;
     border-radius: 6px 6px 2px 2px;
@@ -342,18 +345,20 @@
     <div class="content">
       <div>
         <div class="tagline">Ring in the new year</div>
-        <div class="headline">New Year's Eve<br />at Cash's House</div>
         <div class="subhead">Austin, Texas</div>
         <div class="theme">"All That Glitters Is Gold"</div>
 
-        <div class="details">
-          <div>
+        <div class="headline">New Year's Eve Party 2025</div>          <div>
             <strong>Location</strong>
             Cash's House<br />
+                     <div class="description">Join us for a lovely, gilded evening to ring in the New Year on the rooftop, listen to great music, and make great memories</div>
+                     <div class="hosts">Your hosts: Cash Conway & Andrew Kovach</div>
             13130 Pond Springs Rd, #3312<br />
             Austin, TX 78729
+                       </a>
           </div>
 
+                     <a href="https://maps.google.com/?q=13130+Pond+Springs+Rd+3312+Austin+TX+78729" target="_blank" rel="noopener" class="address-link">
           <div class="time-row">
             <strong>Date & Time</strong>
             <span>December 31</span>
@@ -384,8 +389,6 @@
         <div class="clink">
           <div>
             <div class="glass"></div>
-            <div class="stem"></div>
-            <div class="base"></div>
           </div>
           <div>
             <div class="glass"></div>
