Refactor event details for New Year's Eve Party
Updated event location and added hosts information.

--- a/index.html
+++ b/index.html
@@ -351,12 +351,11 @@
         <div class="headline">New Year's Eve Party 2025</div>          <div>
             <strong>Location</strong>
             Cash's House<br />
-                     <div class="description">Join us for a lovely, gilded evening to ring in the New Year on the rooftop, listen to great music, and make great memories</div>
-                     <div class="hosts">Your hosts: Cash Conway & Andrew Kovach</div>
-            13130 Pond Springs Rd, #3312<br />
-            Austin, TX 78729
-                       </a>
-          </div>
+            <a href="https://maps.google.com/?q=13130+Pond+Springs+Rd+%233312+Austin+TX+78729" target="_blank" rel="noopener">13130 Pond Springs Rd, #3312<br />            Austin, TX 78729
+            Austin, TX 78729</a>          </div>
+
+                    <div class="description">Join us for a lovely, gilded evening to ring in the New Year on the rooftop, listen to great music, and make great memories</div>
+                    <div class="hosts">Your hosts: Cash Conway & Andrew Kovach</div>
 
                      <a href="https://maps.google.com/?q=13130+Pond+Springs+Rd+3312+Austin+TX+78729" target="_blank" rel="noopener" class="address-link">
           <div class="time-row">
