--- a/index.html
+++ b/index.html
@@ -3,324 +3,314 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Year's Eve Party 2025</title>
-   <style>
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
+<title>New Year's Eve Party 2025</title>
+<style>
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
+body {
+  background: #020617;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  color: #f9fafb;
+  padding: 20px;
+}
+
+.card {
+  position: relative;
+  width: 100%;
+  max-width: 420px;
+  min-height: 600px;
+  background: radial-gradient(circle at top, #1f2937 0, #020617 70%);
+  border-radius: 24px;
+  padding: 40px 32px;
+  overflow: hidden;
+  box-shadow:
+    0 25px 60px rgba(0, 0, 0, 0.6),
+    0 0 0 1px rgba(148, 163, 184, 0.2);
+}
+
+/* Animated gradient border glow */
+.card::before {
+  content: "";
+  position: absolute;
+  inset: -2px;
+  background: conic-gradient(
+    from 180deg,
+    #facc15,
+    #f97316,
+    #22d3ee,
+    #facc15
+  );
+  filter: blur(10px);
+  opacity: 0.45;
+  z-index: -1;
+  animation: rotateGlow 18s linear infinite;
+}
+
+@keyframes rotateGlow {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+/* Floating confetti */
+.confetti {
+  position: absolute;
+  width: 3px;
+  height: 10px;
+  background: linear-gradient(to bottom, #f97316, #facc15);
+  border-radius: 999px;
+  opacity: 0;
+  animation: fall 8s linear infinite;
+}
+
+.confetti:nth-child(1) { left: 10%; animation-delay: 0s; }
+.confetti:nth-child(2) { left: 20%; animation-delay: 1s; height: 8px; }
+.confetti:nth-child(3) { left: 30%; animation-delay: 2s; }
+.confetti:nth-child(4) { left: 50%; animation-delay: 4s; height: 7px; }
+.confetti:nth-child(5) { left: 60%; animation-delay: 5s; }
+.confetti:nth-child(6) { left: 70%; animation-delay: 6s; height: 8px; }
+.confetti:nth-child(7) { left: 90%; animation-delay: 7s; }
+.confetti:nth-child(8) { left: 15%; animation-delay: 2.5s; height: 13px; }
+.confetti:nth-child(9) { left: 35%; animation-delay: 3.5s; height: 11px; }
+.confetti:nth-child(10) { left: 55%; animation-delay: 1.5s; height: 9px; }
+.confetti:nth-child(11) { left: 75%; animation-delay: 0.5s; height: 12px; }
+.confetti:nth-child(12) { left: 85%; animation-delay: 5.5s; height: 8px; }
+.confetti:nth-child(13) { left: 25%; animation-delay: 3s; height: 10px; }
+.confetti:nth-child(14) { left: 45%; animation-delay: 6.5s; height: 9px; }
+.confetti:nth-child(15) { left: 65%; animation-delay: 4.5s; height: 11px; }
+
+.confetti:nth-child(1) { left: 10%; animation-delay: 0s; }
+.confetti:nth-child(2) { left: 20%; animation-delay: 1s; height: 8px; }
+.confetti:nth-child(3) { left: 30%; animation-delay: 2s; }
+.confetti:nth-child(4) { left: 50%; animation-delay: 3s; }
+.confetti:nth-child(5) { left: 40%; animation-delay: 4s; height: 7px; }
+.confetti:nth-child(6) { left: 70%; animation-delay: 5s; }
+.confetti:nth-child(7) { left: 60%; animation-delay: 6s; height: 8px; }
+.confetti:nth-child(8) { left: 90%; animation-delay: 7s; }
+
+@keyframes fall {
+  0%, 100% { transform: translateY(10%); opacity: 0.9; }
+  50% { transform: translateY(-10%); opacity: 1; }
+}
+
+.content {
+  margin-top: 8px;
+}
+
+.clink {
+  margin-top: 8px;
+}
+
+.glass::before {
+  content: "";
+  position: absolute;
+  inset: -2px;
+  background: conic-gradient(
+    from 180deg,
+    #facc15,
+    #f97316,
+    #22d3ee,
+    #facc15
+  );
+  filter: blur(10px);
+  opacity: 0.45;
+  z-index: -1;
+  animation: rotateGlow 18s linear infinite;
+}
+
+@keyframes fizz {
+  0%, 100% { transform: translateY(10%); opacity: 0.9; }
+  50% { transform: translateY(-10%); opacity: 1; }
+}
+
+.stem {
+  width: 2px;
+  height: 12px;
+  background: #facc15;
+  margin: 0 auto;
+}
+
+.base {
+  width: 12px;
+  height: 3px;
+  background: #facc15;
+  margin: 3px auto 0;
+  border-radius: 999px;
+}
+
+.tagline {
+  font-size: 0.875rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  color: #facc15;
+  margin-bottom: 0.5rem;
+}
+
+.subhead {
+  font-size: 0.875rem;
+  color: #94a3b8;
+  margin-bottom: 0.5rem;
+}
+
+.theme {
+  font-size: 1rem;
+  color: #fbbf24;
+  font-style: italic;
+  margin-bottom: 1.5rem;
+}
+
+.headline {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1.5rem;
+  line-height: 1.2;
+  background: linear-gradient(135deg, #facc15, #fbbf24);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.description {
+  font-size: 1rem;
+  line-height: 1.6;
+  color: #cbd5e1;
+  margin: 1.5rem 0;
+}
+
+.hosts {
+  font-size: 1.125rem;
+  font-style: italic;
+  color: #f1f5f9;
+  padding: 1rem 1.5rem;
+  margin: 1.5rem 0;
+  background: rgba(249, 250, 251, 0.05);
+  border-left: 4px solid #facc15;
+  border-radius: 0 8px 8px 0;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.time-row {
+  margin: 1.5rem 0;
+}
+
+.time-row strong {
+  display: block;
+  color: #facc15;
+  margin-bottom: 0.5rem;
+  font-size: 1.125rem;
+}
+
+.time-row span {
+  display: block;
+  color: #cbd5e1;
+  font-size: 0.95rem;
+  margin-bottom: 0.25rem;
+}
+
+.byob {
+  margin: 1.5rem 0;
+}
+
+.byob strong {
+  display: block;
+  color: #facc15;
+  margin-bottom: 0.5rem;
+  font-size: 1.125rem;
+}
+
+.dress-code {
+  margin: 1.5rem 0;
+}
+
+.dress-code > strong {
+  display: block;
+  color: #facc15;
+  margin-bottom: 1rem;
+  font-size: 1.125rem;
+}
+
+.dress-section {
+  margin-bottom: 1rem;
+  padding-left: 1rem;
+  color: #cbd5e1;
+  line-height: 1.6;
+}
+
+.dress-section strong {
+  color: #f1f5f9;
+}
+
+.footer {
+  margin-top: 2rem;
+  text-align: center;
+  color: #facc15;
+  font-size: 1.25rem;
+}
+
+.clink {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-top: 1rem;
+}
+
+.clink > div {
+  position: relative;
+}
+
+.glass {
+  width: 14px;
+  height: 26px;
+  border-radius: 6px 6px 2px 2px;
+  border: 2px solid #facc15;
+  position: relative;
+  overflow: hidden;
+}
+
+width: 14px;
+height: 26px;
+border-radius: 6px 6px 2px 2px;
+border: 2px solid #facc15;
+position: relative;
+overflow: hidden;
+
+.stem {
+  width: 2px;
+  height: 12px;
+  background: #facc15;
+  margin: 0 auto;
+}
+
+.base {
+  width: 12px;
+  height: 3px;
+  background: #facc15;
+  margin: 3px auto 0;
+  border-radius: 999px;
+}
+
+@media (max-width: 480px) {
   body {
-    background: #020617;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    color: #f9fafb;
-    padding: 20px;
+    padding: 10px;
   }
-
   .card {
-    position: relative;
-    width: 100%;
-    max-width: 420px;
-    min-height: 600px;
-    background: radial-gradient(circle at top, #1f2937 0, #020617 70%);
-    border-radius: 24px;
-    padding: 40px 32px;
-    overflow: hidden;
-    box-shadow:
-      0 25px 60px rgba(0, 0, 0, 0.6),
-      0 0 0 1px rgba(148, 163, 184, 0.2);
+    padding: 32px 24px;
   }
-
-  /* Animated gradient border glow */
-  .card::before {
-    content: "";
-    position: absolute;
-    inset: -2px;
-    background: conic-gradient(
-      from 180deg,
-      #facc15,
-      #f97316,
-      #e5e7eb,
-      #22d3ee,
-      #facc15
-    );
-    filter: blur(10px);
-    opacity: 0.45;
-    z-index: -1;
-    animation: rotateGlow 18s linear infinite;
-  }
-
-  @keyframes rotateGlow {
-    to {
-      transform: rotate(360deg);
-    }
-  }
-
-  /* Floating confetti */
-  .confetti {
-    position: absolute;
-    width: 4px;
-    height: 10px;
-    background: linear-gradient(to bottom, #facc15, #f97316);
-    border-radius: 999px;
-    opacity: 0;
-    animation: fall 8s linear infinite;
-  }
-
-  .confetti:nth-child(1) { left: 10%; animation-delay: 0s; }
-  .confetti:nth-child(2) { left: 20%; animation-delay: 1s; height: 8px; }
-  .confetti:nth-child(3) { left: 30%; animation-delay: 2s; height: 12px; }
-  .confetti:nth-child(4) { left: 40%; animation-delay: 3s; }
-  .confetti:nth-child(5) { left: 50%; animation-delay: 4s; height: 7px; }
-  .confetti:nth-child(6) { left: 60%; animation-delay: 5s; height: 11px; }
-  .confetti:nth-child(7) { left: 70%; animation-delay: 6s; }
-  .confetti:nth-child(8) { left: 80%; animation-delay: 7s; height: 9px; }
-  .confetti:nth-child(9) { left: 90%; animation-delay: 2.5s; height: 13px; }
-  .confetti:nth-child(10) { left: 15%; animation-delay: 1.5s; height: 11px; }
-  .confetti:nth-child(11) { left: 35%; animation-delay: 3.5s; height: 9px; }
-  .confetti:nth-child(12) { left: 55%; animation-delay: 5.5s; height: 13px; }
-  .confetti:nth-child(13) { left: 75%; animation-delay: 0.5s; height: 8px; }
-  .confetti:nth-child(14) { left: 85%; animation-delay: 4.5s; height: 10px; }
-  .confetti:nth-child(15) { left: 95%; animation-delay: 6.5s; height: 12px; }
-
-  @keyframes fall {
-    0% {
-      top: -50px;
-      opacity: 0;
-      transform: translateX(0) rotate(0deg);
-    }
-    10% {
-      opacity: 0.7;
-    }
-    50% {
-      transform: translateX(10px) rotate(90deg);
-    }
-    100% {
-      top: 110%;
-      opacity: 0.7;
-      transform: translateX(-5px) rotate(180deg);
-    }
-  }
-
-  .content {
-    position: relative;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    z-index: 1;
-  }
-
-  .tagline {
-    text-transform: uppercase;
-    letter-spacing: 0.2em;
-    font-size: 0.7rem;
-    color: #e5e7eb;
-    opacity: 0.8;
-    text-align: center;
-  }
-
   .headline {
-    text-align: center;
-    margin-top: 24px;
-    font-size: 1.9rem;
-    line-height: 1.3;
-    text-transform: uppercase;
-    letter-spacing: 0.16em;
-    animation: shimmer 3.5s ease-in-out infinite;
-    background: linear-gradient(
-      120deg,
-      #facc15 0%,
-      #fff 25%,
-      #f97316 50%,
-      #facc15 75%,
-      #e5e7eb 100%
-    );
-    background-size: 300% 100%;
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
+    font-size: 1.6rem;
   }
-
-  @keyframes shimmer {
-    0% {
-      background-position: -300% 0;
-
-           .description {
-        text-align: center;
-        margin-top: 20px;
-        font-size: 1.1rem;
-        line-height: 1.6;
-        color: #f9fafb;
-        max-width: 600px;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      .hosts {
-        text-align: center;
-        margin-top: 15px;
-        font-size: 1rem;
-        color: #d4af37;
-        font-weight: 500;
-      }
-    }
-    100% {
-      background-position: 300% 0;
-    }
-  }
-
-  .subhead {
-    text-align: center;
-    margin-top: 8px;
-
-     @keyframes subtleShimmer {
-    0% {
-      background-position: -100% 0;
-    }
-    100% {
-      background-position: 100% 0;
-    }
-  }
-    font-size: 0.9rem;
-    color: #e5e7eb;
-    opacity: 0.9;
-  }
-
   .theme {
-    text-align: center;
-    margin-top: 16px;
-    margin-bottom: 8px;
-    font-size: 1.15rem;
-    font-style: italic;
-    font-weight: 500;
-    text-shadow: 0 0 25px rgba(250, 204, 21, 0.6);
-    animation: shimmer 3.5s ease-in-out infinite;
-    background: linear-gradient(
-      120deg,
-      #facc15 0%,
-      #fff 25%,
-      #f97316 50%,
-      #facc15 75%,
-      #e5e7eb 100%
-    );
-    background-size: 300% 100%;
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
+    font-size: 1rem;
   }
-
-  .details {
-    margin-top: 32px;
-    font-size: 0.9rem;
-    line-height: 1.7;
-    color: #e5e7eb;
-  }
-
-  .details strong {
-    color: #facc15;
-    font-weight: 600;
-    display: block;
-    margin-bottom: 4px;
-       animation: subtleShimmer 4s ease-in-out infinite;
-    background: linear-gradient(
-      120deg,
-      #facc15 0%,
-      #fbbf24 50%,
-      #facc15 100%
-    );
-    background-size: 200% 100%;
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-
-  .details > div {
-    margin-bottom: 20px;
-  }
-
-  .time-row span {
-    display: block;
-  }
- 
-
-  .byob {
-    padding-top: 20px;
-    border-top: 1px solid rgba(148, 163, 184, 0.3);
-  }
-
-  .dress-code {
-    padding-top: 20px;
-    border-top: 1px solid rgba(148, 163, 184, 0.3);
-  }
-
-  .dress-section {
-    margin-top: 12px;
-       padding: 14px 18px;
-    background: rgba(249, 115, 22, 0.06);
-    border-radius: 10px;
-    line-height: 1.8;
-  }
-
-  .clink {
-    margin-top: 8px;
-  }
-
-    width: 14px;
-    height: 26px;
-    border-radius: 6px 6px 2px 2px;
-    border: 2px solid #facc15;
-    position: relative;
-    overflow: hidden;
-  }
-
-  .glass::before {
-    content: "";
-    position: absolute;
-    inset: 55% 0 0 0;
-    background: linear-gradient(to top, #f97316, #facc15);
-    animation: fizz 2.4s ease-in-out infinite;
-  }
-
-  @keyframes fizz {
-    0%, 100% { transform: translateY(10%); opacity: 0.9; }
-    50% { transform: translateY(-10%); opacity: 1; }
-  }
-
-  .stem {
-    width: 2px;
-    height: 12px;
-    background: #facc15;
-    margin: 0 auto;
-  }
-
-  .base {
-    width: 12px;
-    height: 3px;
-    background: #facc15;
-    margin: 3px auto 0;
-    border-radius: 999px;
-  }
-
-  @media (max-width: 480px) {
-    body {
-      padding: 10px;
-    }
-    .card {
-      padding: 32px 24px;
-    }
-    .headline {
-      font-size: 1.6rem;
-    }
-    .theme {
-      font-size: 1rem;
-    }
-  }
+}
 </style>
 </head>
 <body>
@@ -348,52 +338,52 @@
         <div class="subhead">Austin, Texas</div>
         <div class="theme">"All That Glitters Is Gold"</div>
 
-        <div class="headline">New Year's Eve Party 2025</div>          <div>
-            <strong>Location</strong>
-            Cash's House<br />
-            <a href="https://maps.google.com/?q=13130+Pond+Springs+Rd+%233312+Austin+TX+78729" target="_blank" rel="noopener">13130 Pond Springs Rd, #3312<br />            Austin, TX 78729
-            Austin, TX 78729</a>          </div>
+        <div class="headline">New Year's Eve Party 2025</div>
+        <div>
+          <strong>Location</strong>
+          Cash's House<br />
+          13130 Pond Springs Rd, #3312<br />
+          Austin, TX 78729
+        </div>
 
-                    <div class="description">Join us for a lovely, gilded evening to ring in the New Year on the rooftop, listen to great music, and make great memories</div>
-                    <div class="hosts">Your hosts: Cash Conway & Andrew Kovach</div>
+        <div class="description">Join us for a lovely, gilded evening to ring in the New Year on the rooftop, listen to great music, and make great memories</div>
+        <div class="hosts">Your hosts: Cash Conway & Andrew Kovach</div>
 
-                     <a href="https://maps.google.com/?q=13130+Pond+Springs+Rd+3312+Austin+TX+78729" target="_blank" rel="noopener" class="address-link">
-          <div class="time-row">
-            <strong>Date & Time</strong>
-            <span>December 31</span>
-            <span>8:00 PM – 1:00 AM</span>
+        <div class="time-row">
+          <strong>Date & Time</strong>
+          <span>December 31</span>
+          <span>8:00 PM – 1:00 AM</span>
+        </div>
+
+        <div class="byob">
+          <strong>Drinks</strong>
+          BYOB, but there will be a batched cocktail and bubbly ready for midnight.
+        </div>
+
+        <div class="dress-code">
+          <strong>Dress Code</strong>
+          <div class="dress-section">
+            <strong>Ladies:</strong><br />
+            Cocktail or party attire encouraged. Sequins, metallics, champagne tones, or gold accents are perfect. Dressy but fun. Whatever makes you feel great ringing in the New Year.
           </div>
-
-          <div class="byob">
-            <strong>Drinks</strong>
-            BYOB, but there will be a batched cocktail and bubbly ready for midnight.
-          </div>
-
-          <div class="dress-code">
-            <strong>Dress Code</strong>
-            <div class="dress-section">
-              <strong>Ladies:</strong><br />
-              Cocktail or party attire encouraged. Sequins, metallics, champagne tones, or gold accents are perfect. Dressy but fun. Whatever makes you feel great ringing in the New Year.
-            </div>
-            <div class="dress-section">
-              <strong>Gentlemen:</strong><br />
-              No suits required. A nice button-down with slacks or dark jeans is perfect. Feel free to add a champagne, metallic, or gold touch—shirt, shoes, or accessory.
-            </div>
+          <div class="dress-section">
+            <strong>Gentlemen:</strong><br />
+            No suits required. A nice button-down with slacks or dark jeans is perfect. Feel free to add a champagne, metallic, or gold touch—shirt, shoes, or accessory.
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="footer">
-        See you at midnight
-        <div class="clink">
-          <div>
-            <div class="glass"></div>
-          </div>
-          <div>
-            <div class="glass"></div>
-            <div class="stem"></div>
-            <div class="base"></div>
-          </div>
+    <div class="footer">
+      See you at midnight
+      <div class="clink">
+        <div>
+          <div class="glass"></div>
+        </div>
+        <div>
+          <div class="glass"></div>
+          <div class="stem"></div>
+          <div class="base"></div>
         </div>
       </div>
     </div>
