Add favicon and update event details formatting
Added favicon and updated text formatting for event details.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <!-- Prevents iOS/Android from turning the address/phone into blue links automatically -->
   <meta name="format-detection" content="telephone=no, date=no, email=no, address=no">
 
+  <!-- Favicon (Champagne Glass) -->
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🥂</text></svg>">
+
   <!-- Social Media Preview Tags -->
   <meta property="og:title" content="New Year's Eve Party 2025">
   <meta property="og:description" content="All That Glitters Is Gold. Join Andrew & Cash to ring in 2026!">
@@ -199,8 +202,6 @@
       gap: 2px;
       line-height: 1.1;
     }
-
-    /* Removed .title span.main-title since it is being deleted from HTML */
 
     /* The Gold Text Effect */
     .title span.highlight {
@@ -627,7 +628,9 @@
         </button>
         <div class="modal-text">
           <p>Take the entrance to the Aspire North Apartments that takes you to the back of the complex, not the leasing office entrance.</p>
+          <br>
           <p>Immediately park in one of the spaces behind the building on your right.</p>
+          <br>
           <p>Text Cash or Andrew that you're here, and we'll come let you in.</p>
         </div>
       </div>
@@ -643,9 +646,10 @@
           </svg>
         </button>
         <div class="modal-text">
-          <p><strong>Ladies</strong><br>
+          <p><strong>Ladies:</strong><br>
           Cocktail or party attire encouraged. Sequins, metallics, champagne tones, or gold accents are perfect. Dressy but fun. Whatever makes you feel great ringing in the New Year.</p>
-          <p><strong>Gentlemen</strong><br>
+          <br>
+          <p><strong>Gentlemen:</strong><br>
           No suits required. A nice button-down with slacks or dark jeans is perfect. Feel free to add a champagne, metallic, or gold touch—shirt, shoes, or accessory.</p>
         </div>
       </div>
