Update host image in index.html

--- a/index.html
+++ b/index.html
@@ -988,7 +988,7 @@
       <aside class="right-column">
         <div class="host-block">
           <div class="avatar">
-            <img src="20251212_182720.jpg" alt="Andrew & Cash">
+            <img src="hosts.jpg" alt="Andrew & Cash">
           </div>
           <div class="host-text">
             <div class="host-label">Hosts</div>
