Revise event message for New Year's celebration
Updated the event description slightly.

--- a/index.html
+++ b/index.html
@@ -972,8 +972,8 @@
       <section>
         <div class="section-heading">A message from your hosts</div>
         <p class="description">
-          Come hang out, toast the year, and yell on the rooftop patio when the ball drops.  
-          Expect good music, snacks, drinks, maybe some Mario Kart and board games, and whatever chaos 2026 deserves.
+          We’d love to spend the last moments of the year with you. Come hang out for an evening of 
+          games, drinks, great music, and yelling on the rooftop patio when the ball drops! 
         </p>
 
         <ul class="details-list">
